fixed: avatar photo visibility

--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -4,6 +4,4 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  position: relative;
-  z-index: -1;
 }
